2005-04-11 Vladimir Hirsl
	Fix for PR 90193: Scanner faililng on Local/User paths as provided in Std. Make
	User specified include paths (through the UI) are now created with 
	isSystemInclude attribute set to true.
	
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPElement.java

2005-04-08 Alain Magloire
	New icons from the IBM folks(Patch from DDaoust)
	* icons/*
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/OpenProjectGroup.java
	* plugin.xml

2005-04-06 David Inglis
	Fixed bug# 90440
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/CElementAdapterFactory.java
	* src/org/eclipse/cdt/internal/ui/CWorkbenchAdapter.java
	
2005-04-04 Alain Magloire
	Move to Eclipse-31M6
	* src/org/eclipse/cdt/internal/ui/cview/CopyAction.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties

2005-03-30 Alain Magloire
	Fix PR 87334
	* src/org/eclipse/cdt/internal/ui/compare/CMergeViewer.java

2005-03-29 Chris Wiebe
	prevent duplicate #includes
	* src/org/eclipse/cdt/internal/ui/wizards/NewClassCodeGenerator.java

2005-03-29 Chris Wiebe
	fix PR#87328 by making class wizard page publicly accessible
	refactored wizard code and added comments
	* src/org/eclipse/cdt/internal/ui/wizards/AbstractMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/ConstructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/DestructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/IMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewBaseClassSelectionDialog.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewClassWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/DestructorMethodStub.java
	* src/org/eclipse/cdt/internal/ui/wizards/DestructorMethodStub.java