@@ -230,7 +230,7 @@ PathEntryVariableDialog.dialogTitle.existingVariable = Edit an Existing PathEntr
 PathEntryVariableDialog.message.newVariable = Enter a new PathEntry variable name and its associated location.
 PathEntryVariableDialog.message.existingVariable = Edit PathEntry variable's name and path value.
 
-PathEntryVariableDialog.variableName = &Name:
+PathEntryVariableDialog.variableName = &Name:overConfigurationBlock
 PathEntryVariableDialog.variableValue = &Location:
 PathEntryVariableDialog.variableNameEmptyMessage = You must provide a variable name.
 PathEntryVariableDialog.variableValueEmptyMessage = You must provide a file or folder path as variable value.
