@@ -1,3 +1,8 @@
+2005-04-11 Alain Magloire
+	Fix PR 91000: NPE in CEditorHoverConfigurationBlock
+	* src/org/eclipse/cdt/internal/ui/preferences/CEditorHoverConfigurationBlock.java
+	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
+	
 2005-04-11 Vladimir Hirsl
 	Fix for PR 90193: Scanner faililng on Local/User paths as provided in Std. Make
 	User specified include paths (through the UI) are now created with 
